--- a/asset/style.css
+++ b/asset/style.css
@@ -1,11 +1,37 @@
+@import url("https://fonts.googleapis.com/css?family=Luckiest+Guy");
+body {
+    margin: 0;
+    padding: 0;
+    background-color: black;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: center;
+}
+#container {
+    margin: 5% 10% 0% 10%;
+    padding: 0;
+    border: 1px solid #1818e980;
+    background-color: white;
+    box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .5);
+}
+form {
+    margin: 5% 0 0 0;
+}
+
 table tr td {
-    border: 1px solid black;
+    background-color: white;
+    border: 1px solid olive;
     height: 70px;
     width: 150px;
 }
-
-body {
-    text-align: center;
+table {
+    
+}
+td {
+    box-shadow: 15px 5px 5px olive;
+}
+td:hover {
+    background-color: rgb(231, 231, 157);
+    cursor: row-resize;
 }
 
 body table {
@@ -13,7 +39,7 @@ body table {
 }
 
 div.splash{
-    color:green;
+    color:olive;
     margin: auto;
     font-size: 1.4em;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -30,9 +56,119 @@ div.splash{
 }
 
 h1 {
-    color:green;
+    color:olive;
     margin: auto;
     font-size: 2.1em;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: 900;
 }
+button{
+    border-radius: 12px;
+    color: rgb(231, 231, 157);
+    font-weight: bold;
+    background-color: rgba(0, 0, 255, .5);
+}
+input{
+    border-radius: 12px;
+}
+
+#animate{
+    margin-top: 5%;
+}
+ h2 {
+    cursor: default;
+    position: relative;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 80%;
+    height: 50px;
+    margin: auto;
+    display: block;
+    text-align: center;
+  }
+  
+   h2 code {
+    position: relative;
+    top: 20px;
+    display: inline-block;
+    -webkit-animation: bounce 0.3s ease infinite alternate;
+    font-size: 50px;
+    color: #fff;
+    text-shadow: 0 1px 0 #ccc, 0 2px 0 #ccc, 0 3px 0 #ccc, 0 4px 0 #ccc,
+      0 5px 0 #ccc, 0 6px 0 transparent, 0 7px 0 transparent, 0 8px 0 transparent,
+      0 9px 0 transparent, 0 10px 10px rgba(0, 0, 0, 0.4);
+  }
+  
+   h2 code:nth-child(2) {
+    -webkit-animation-delay: 0.1s;
+  }
+  
+   h2 code:nth-child(3) {
+    -webkit-animation-delay: 0.2s;
+  }
+  
+   h2 code:nth-child(4) {
+    -webkit-animation-delay: 0.3s;
+  }
+  
+   h2 code:nth-child(5) {
+    -webkit-animation-delay: 0.4s;
+  }
+  
+   h2 code:nth-child(6) {
+    -webkit-animation-delay: 0.5s;
+  }
+  
+   h2 code:nth-child(7) {
+    -webkit-animation-delay: 0.6s;
+  }
+  
+   h2 code:nth-child(8) {
+    -webkit-animation-delay: 0.2s;
+  }
+  
+   h2 code:nth-child(9) {
+    -webkit-animation-delay: 0.3s;
+  }
+  
+    h2 code:nth-child(10) {
+    -webkit-animation-delay: 0.4s;
+  }
+  
+   h2 code:nth-child(11) {
+    -webkit-animation-delay: 0.5s;
+  }
+  
+   h2 code:nth-child(12) {
+    -webkit-animation-delay: 0.6s;
+  }
+  
+   h2 code:nth-child(13) {
+    -webkit-animation-delay: 0.7s;
+  }
+  
+    h2 code:nth-child(14) {
+    -webkit-animation-delay: 0.8s;
+  }
+  
+  /* ANIMATION */
+  @-webkit-keyframes bounce {
+    100% {
+      top: -20px;
+      text-shadow: 0 1px 0 #ccc, 0 2px 0 #ccc, 0 3px 0 #ccc, 0 4px 0 #ccc,
+        0 5px 0 #ccc, 0 6px 0 #ccc, 0 7px 0 #ccc, 0 8px 0 #ccc, 0 9px 0 #ccc,
+        0 50px 25px rgba(0, 0, 0, 0.2);
+    }
+  }
+  span{
+      color: rgba(0, 0, 255, .5);
+      font-weight: bold;
+      animation: blinker 1s linear infinite;
+  }
+  
+  @keyframes blinker {
+    50% {
+      opacity: 0;
+    }
+  }
