--- a/asset/style.css
+++ b/asset/style.css
@@ -5,21 +5,34 @@ body {
     background-color: black;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
+    width: 100%;
+  height: 100%;
+  background-color: skyblue;
+  background-image: -webkit-linear-gradient(90deg, skyblue 0%, steelblue 100%);
+  background-attachment: fixed;
+  background-size: 100% 100%;
+  overflow: hidden;
+  font-family: "Luckiest Guy", cursive;
+  -webkit-font-smoothing: antialiased;
 }
 #container {
     margin: 5% 10% 0% 10%;
     padding: 0;
     border: 1px solid #1818e980;
+    border-radius: 12px;
     background-color: white;
     box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .5);
 }
 form {
     margin: 5% 0 0 0;
 }
+input {
+    width: 10%;
+}
 
 table tr td {
     background-color: white;
-    border: 1px solid olive;
+    border: 1px solid #D6A7CF;
     height: 70px;
     width: 150px;
 }
@@ -27,10 +40,10 @@ table {
     
 }
 td {
-    box-shadow: 15px 5px 5px olive;
+    box-shadow: 15px 5px 5px #D6A7CF;
 }
 td:hover {
-    background-color: rgb(231, 231, 157);
+    background-color: #EDEBF9;
     cursor: row-resize;
 }
 
@@ -39,11 +52,12 @@ body table {
 }
 
 div.splash{
-    color:olive;
+    color: #D6A7CF;
     margin: auto;
     font-size: 1.4em;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: 500;
+    animation: blinker 1s linear infinite;
 
 }
 
@@ -63,9 +77,9 @@ h1 {
 }
 button{
     border-radius: 12px;
-    color: rgb(231, 231, 157);
+    color: #8887A2;
     font-weight: bold;
-    background-color: rgba(0, 0, 255, .5);
+    background-color: #FEDFE6;
 }
 input{
     border-radius: 12px;
@@ -162,7 +176,7 @@ input{
     }
   }
   span{
-      color: rgba(0, 0, 255, .5);
+      color: #D6A7CF;
       font-weight: bold;
       animation: blinker 1s linear infinite;
   }
