--- a/asset/style.css
+++ b/asset/style.css
@@ -36,6 +36,7 @@ table tr td {
 
 td {
     box-shadow: 5px 5px 5px #D6A7CF;
+    border-radius: 5px;
 }
 td:hover {
     background-color: #EDEBF9;
@@ -47,9 +48,9 @@ body table {
 }
 
 div.splash{
-    color: #D6A7CF;
+    color: black;
     margin: auto;
-    font-size: 1.4em;
+    font-size: 2em;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: 500;
     animation: blinker 1s linear infinite;
