--- a/asset/style.css
+++ b/asset/style.css
@@ -21,7 +21,7 @@ body {
     border: 1px solid #1818e980;
     border-radius: 12px;
     background-color: white;
-    box-shadow: 5px 5px 2px 1px rgba(0, 0, 255, .5);
+    box-shadow: 5px 5px 2px 1px gray;
 }
 form {
     margin: 5% 0 0 0;
@@ -72,12 +72,11 @@ h1 {
     font-weight: 900;
 }
 button{
-    border-radius: 12px;
-    padding: 5px;
+    border-radius: 5px 5px 5px 5px;
+    padding: 7px;
     font-weight: bold;
-    background-color: white;
-    color: #D6A7CF;
-    border: 2px solid #8887A2;
+    color: white;
+    background-color: rgb(89, 114, 223)
 }
 input{
     border-radius: 12px;
@@ -106,7 +105,8 @@ input{
     top: 20px;
     display: inline-block;
     -webkit-animation: bounce 0.3s ease infinite alternate;
-    font-size: 50px;
+    font-size: 60px;
+    font-family: glyph;
     color: #fff;
     text-shadow: 0 1px 0 #ccc, 0 2px 0 #ccc, 0 3px 0 #ccc, 0 4px 0 #ccc,
       0 5px 0 #ccc, 0 6px 0 transparent, 0 7px 0 transparent, 0 8px 0 transparent,
@@ -187,5 +187,14 @@ input{
   @keyframes blinker {
     50% {
       opacity: 0;
+    }
+  }
+
+  @media only screen and (max-width: 681px) {
+    table tr td {
+        width: 120px;
+    }
+    h2{
+        font-size: 10px;
     }
   }
