--- a/asset/style.css
+++ b/asset/style.css
@@ -105,8 +105,8 @@ input{
     top: 20px;
     display: inline-block;
     -webkit-animation: bounce 0.3s ease infinite alternate;
-    font-size: 60px;
-    font-family: glyph;
+    font-size: 55px;
+    font-family: Shojumaru;
     color: #fff;
     text-shadow: 0 1px 0 #ccc, 0 2px 0 #ccc, 0 3px 0 #ccc, 0 4px 0 #ccc,
       0 5px 0 #ccc, 0 6px 0 transparent, 0 7px 0 transparent, 0 8px 0 transparent,
