--- a/asset/style.css
+++ b/asset/style.css
@@ -87,7 +87,7 @@ input{
     margin-top: 5%;
 }
  h2 {
-    cursor: default;
+    cursor: pointer;
     position: relative;
     top: 0;
     left: 0;
@@ -192,11 +192,20 @@ input{
   }
 
   @media only screen and (max-width: 681px) {
-    table tr td {
-        width: 120px;
+
+    #container {
+        margin: 15% 5% 10% 5%;
+        padding: 10%;
+
     }
     h2 code{
-        font-size: 25px;
-        margin-bottom: 10%;
+        font-size: 28px;
+        margin-top: 10%;
+    }
+    div.splash{
+        font-size: 1em;
+    }
+    span{
+        font-size: 1em; 
     }
   }
