--- a/asset/style.css
+++ b/asset/style.css
@@ -5,15 +5,15 @@ body {
     background-color: black;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
-    width: 100%;
-  height: 100%;
-  background-color: skyblue;
-  background-image: -webkit-linear-gradient(90deg, skyblue 0%, steelblue 100%);
-  background-attachment: fixed;
-  background-size: 100% 100%;
-  overflow: hidden;
-  font-family: "Luckiest Guy", cursive;
-  -webkit-font-smoothing: antialiased;
+    max-width: 100%;
+    max-height: 100%;
+    background-color: skyblue;
+    background-image: -webkit-linear-gradient(90deg, skyblue 0%, steelblue 100%);
+    background-attachment: fixed;
+    background-size: 100% 100%;
+    overflow: hidden;
+    font-family: "Luckiest Guy", cursive;
+    -webkit-font-smoothing: antialiased;
 }
 #container {
     margin: 2% 10% 0% 10%;
@@ -194,8 +194,8 @@ input{
   @media only screen and (max-width: 681px) {
 
     #container {
-        margin: 15% 5% 10% 5%;
-        padding: 10%;
+        margin: 3%;
+        padding: 5%;
 
     }
     h2 code{
@@ -207,5 +207,12 @@ input{
     }
     span{
         font-size: 1em; 
+    }
+    .shade {
+    position: absolute;
+    width: 200px;
+    height: 90px;
+    margin: 0 auto;
+    left: 200px;
     }
   }
